; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/extres/phy/extr_phy_usb.c_phynode_usb_set_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/extres/phy/extr_phy_usb.c_phynode_usb_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phynode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @phynode_usb_set_mode(%struct.phynode* %0, i32 %1) #0 {
  %3 = alloca %struct.phynode*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.phynode* %0, %struct.phynode** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @PHY_TOPO_ASSERT()
  %7 = load %struct.phynode*, %struct.phynode** %3, align 8
  %8 = call i32 @PHYNODE_XLOCK(%struct.phynode* %7)
  %9 = load %struct.phynode*, %struct.phynode** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @PHYNODE_USB_SET_MODE(%struct.phynode* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.phynode*, %struct.phynode** %3, align 8
  %13 = call i32 @PHYNODE_UNLOCK(%struct.phynode* %12)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @PHY_TOPO_ASSERT(...) #1

declare dso_local i32 @PHYNODE_XLOCK(%struct.phynode*) #1

declare dso_local i32 @PHYNODE_USB_SET_MODE(%struct.phynode*, i32) #1

declare dso_local i32 @PHYNODE_UNLOCK(%struct.phynode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
